<resources>
    <string name="app_name">Voyage</string>
    <string name="view_image">view image</string>
    <string name="background_img">background img</string>
    <string name="onboard_text">text</string>
    <string name="onboard_icon1">icon1</string>
    <string name="onboard_icon2">icon2</string>
    <string name="onboatd_icon3">icon3</string>

    <string name="explore_text">explore</string>
    <string name="restaurants_text">Restaurants</string>
    <string name="hotels_text">Hotels</string>
    <string name="drivers_text">Drivers</string>
    <string name="trains_text">Trains</string>
    <string name="featured_title_text">All featured places</string>
    <string name="popular_title_text">Popular</string>
    <string name="winter_holidays_title_text">Winter Holidays Special!</string>
    <string name="new_package_title_text">Make Your Own Custom Package</string>
    <string name="add_destinations">Add Destinations</string>

    <!-- content description -->
    <string name="restaurant_image_button_description">Click to view available restaurants.</string>
    <string name="hotels_image_button_description">View available hotels.</string>
    <string name="drivers_image_button_description">View available drivers.</string>
    <string name="trains_image_button_description">View available trains.</string>


    <string name="splash1_text">Let\'s start your journey off on the right foot.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>