<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Voyage.NoDark"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/backpack_guy_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/pic_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/view_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/view_image"
            android:scaleType="centerCrop"
            android:src="@drawable/travel_guy_bagpack" />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_guideline">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/background_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/splash_background_img"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/background_img"
                android:scaleType="centerCrop"
                android:src="@drawable/background1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/text_view_card"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerInParent="true"
                app:cardElevation="50dp"
                app:cardCornerRadius="25dp"
                app:layout_constraintBottom_toBottomOf="@id/guideline_textBottom"
                app:layout_constraintLeft_toLeftOf="@id/guideline_textStart"
                app:layout_constraintRight_toRightOf="@id/guideline_textEnd"
                app:layout_constraintTop_toTopOf="@id/guideline_texttop">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/icon_container_linear"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:paddingLeft="30dp"
                        android:paddingTop="5dp"
                        android:paddingRight="30dp"
                        android:weightSum="3"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/guideline_linearTop">

                        <ImageView
                            android:id="@+id/icon1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/onboard_icon1"
                            android:src="@drawable/tent" />

                        <ImageView
                            android:id="@+id/icon2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="15dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/onboard_icon2"
                            android:src="@drawable/map" />

                        <ImageView
                            android:id="@+id/icon3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/onboatd_icon3"
                            android:src="@drawable/passport_n_plane" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="60dp"
                        android:paddingEnd="60dp"
                        android:text="@string/splash1_text"
                        android:textAlignment="center"
                        android:textColor="@color/space_gray"
                        android:textSize="36sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/icon_container_linear"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline_linearTop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_percent="0.8" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_textBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.82" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_texttop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.07" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_textStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.07" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_textEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.93" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/pic_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/card_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36" />


</androidx.constraintlayout.widget.ConstraintLayout>